[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "majorrequiredcommand"
version = "0.1.0"
[tool.poetry.dependencies]
matplotlib = "^3.2"
pandas = "^1.0"
python = "^3.8"
sklearn = "^0.0.0"
[tool.poetry.dev-dependencies]
